--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Template App</h1>
-<p>This is the homepage, son!</p>
+<div class="center hero-unit">
+  <h1>Template App</h1>
+ 
+  <h2>
+    This is the home page of my Template app! 
+  </h2>
+ 
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+ 
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
