--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,7 @@
   <h2>
     This is the home page of my Template app! 
   </h2>
+  <img src="http://www.escudosonline.com/america_norte/mexico/monterrey_7.jpg" class="img-polaroid">
  
   <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
 </div>
